# voshod

./: .env.example  docker-compose.yml
backend/: Dockerfile  manage.py  pyproject.toml
backend/voshod/: admin.py  asgi.py  cdek_api.py  models.py  pochta_api.py  serializers.py  settings.py  urls.py  utils.py  view.py  wsgi.py  yookassa_api.py
backend/voshod/migrations/: 0001_initial.py  0002_auto_20250505_2112.py  0002_order_payment_id_order_payment_status.py  0002_product_image.py  0003_alter_product_image.py  0004_order_customer_address_order_postal_code.py
backend/voshod/templates/admin/: send_shipping_notification.html
backend/voshod/templates/admin/voshod/order/: change_form.html
backend/voshod/templates/emails/: order_confirmation.html  shipping_notification.html
backend/voshod/templatetags/: custom_filters.py
frontend/: Dockerfile  app.vue  nuxt.config.ts  package-lock.json  package.json
frontend/components/: AddressNormalizer.vue  CdekCitySelector.vue  CdekPickupPointSelector.vue  PaymentSuccess.vue
frontend/composables/: useCart.ts  useProduct.ts
frontend/pages/: cart.vue  contacts.vue  index.vue  offer.vue
frontend/plugins/: csrf.ts
nginx/: nginx.conf
