[tool.poetry]
name = "voshod-backend"
version = "0.1.0"
description = ""
authors = ["nike4192 <nike4192@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.5"
djangorestframework = "^3.15.2"
pytz = "^2025.1"
gunicorn = "^23.0.0"
environs = "^14.1.0"
psycopg2-binary = "^2.9.10"
django-cors-headers = "^4.7.0"
pillow = "^11.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
